--- a/src/Web.WebApp/Shared/NavMenu.razor
+++ b/src/Web.WebApp/Shared/NavMenu.razor
@@ -10,7 +10,7 @@
                 <MudNavLink Href="/expenses" IconColor="@Color.Primary" Icon="@Icons.Filled.Paid">
                     Expenses
                 </MudNavLink>
-                <MudNavLink Href="/expensegroups" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
+                <MudNavLink Href="/categories" IconColor="@Color.Primary" Icon="@Icons.Filled.Category">
                     Categories
                 </MudNavLink>
             </MudNavGroup>
